# just-ecr-login

./: Cargo.toml  README.md
src/: main.rs
